<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreditosActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creditos"
        android:shadowColor="@color/black"
        android:textSize="30dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diseño"
        android:shadowColor="@color/black"
        android:textSize="20dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arte"
        android:shadowColor="@color/black"
        android:textSize="20dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/programacion"
        android:shadowColor="@color/black"
        android:textSize="20dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memoryGame"
        android:shadowColor="@color/black"
        android:textSize="20dp"
        android:layout_marginVertical="150dp"
        android:layout_marginHorizontal="10dp"/>

</LinearLayout>