<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/memoryGame"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/memory"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/jugarButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:text="@string/jugar" />

    <Button
        android:id="@+id/puntuacionesButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:text="@string/puntuaciones" />

    <Button
        android:id="@+id/creditosButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:text="@string/creditos" />
</LinearLayout>